[package]
name = "llm-token-saver-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust crate for reducing LLM token consumption in production applications."
readme = "README.md"
repository = "https://github.com/snailer-team/llm-token-saver-rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
